--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "openai": "^4.67.3",
     "react": "^18",
     "react-camera-pro": "^1.4.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "eslint": "^8",
